crates/compiler/tests/snapshots/tokenizer_test__should_scan_rc_data-12.snap
---
source: crates/compiler/tests/tokenizer_test.rs
expression: "<textarea>{{ garbage  {{ }}</textarea>"

---
- StartTag:
    name: textarea
    attributes: []
    self_closing: false
- Interpolation: "{{ garbage  {{ }}"
- EndTag: textarea

