crates/compiler/tests/snapshots/tokenizer_test__should_scan_rc_data-6.snap
---
source: crates/compiler/tests/tokenizer_test.rs
expression: "<textarea><div/></textareas>"

---
- StartTag:
    name: textarea
    attributes: []
    self_closing: false
- Text: "<div/></textareas>"

