crates/compiler/tests/snapshots/tokenizer_test__should_scan_rc_data-9.snap
---
source: crates/compiler/tests/tokenizer_test.rs
expression: "<textarea>{{}}</textarea>"

---
- StartTag:
    name: textarea
    attributes: []
    self_closing: false
- Interpolation: "{{}}"
- EndTag: textarea

